# geoff

./: .gitignore  PROMPT.md  README.md  pyproject.toml  ralph.sh
docs/: BREADCRUMBS.md  PLAN.md  SPEC.md  TUI_REFACTOR.md
docs/.archive/: FINDINGS.md  STRETCH_GOALS.md  tui_refactor_2.md
src/geoff/: app.py  clipboard.py  config.py  config_io.py  config_manager.py  executor.py  main.py  messages.py  prompt_builder.py  validator.py
src/geoff/widgets/: backpressure.py  breadcrumb.py  error_modal.py  loop_config.py  prompt_preview.py  study_docs.py  task_source.py  toolbar.py
tests/: test_app_layout.py  test_backpressure_widget.py  test_breadcrumb_widget.py  test_clipboard.py  test_config.py  test_config_io.py  test_config_manager.py  test_dependencies.py  test_error_modal.py  test_executor.py  test_live_updates.py  test_loop_config_widget.py  test_prompt_builder.py  test_prompt_builder_property.py  test_prompt_preview_widget.py  test_state_persistence.py  test_study_docs_widget.py  test_task_source_widget.py  test_toolbar_widget.py  test_validator.py
utils/: preview_tui.md  preview_tui.py
